[metadata]
name = turbogpt
version = 1.0.1
author = daan-dj
author_email = daan@jumelet.net
description = A python based wrapper for GPT-4 & GPT-3.5 PLUS.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

